--- a/index.html
+++ b/index.html
@@ -12,110 +12,276 @@
         }
 
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+            background: 
+                url('https://images.unsplash.com/photo-1441974231531-c6227db76b6e?w=1920&q=80'),
+                linear-gradient(135deg, #2d6a4f 0%, #1b4332 100%);
+            background-size: cover;
+            background-attachment: fixed;
+            background-position: center;
+            background-blend-mode: overlay;
             min-height: 100vh;
-            padding: 20px;
+            padding: 40px 20px;
+            position: relative;
+            overflow-x: hidden;
+        }
+
+        body::before {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: rgba(27, 67, 50, 0.3);
+            backdrop-filter: blur(80px) saturate(140%);
+            -webkit-backdrop-filter: blur(80px) saturate(140%);
+            pointer-events: none;
+            z-index: 0;
+        }
+
+        body::after {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: 
+                radial-gradient(ellipse at 20% 30%, rgba(168, 230, 207, 0.15) 0%, transparent 50%),
+                radial-gradient(ellipse at 80% 70%, rgba(82, 183, 136, 0.15) 0%, transparent 50%),
+                radial-gradient(ellipse at 50% 50%, rgba(45, 106, 79, 0.1) 0%, transparent 60%);
+            pointer-events: none;
+            animation: shimmer 15s ease-in-out infinite;
+            z-index: 0;
+        }
+
+        @keyframes shimmer {
+            0%, 100% { opacity: 0.6; }
+            50% { opacity: 1; }
         }
 
         .container {
-            max-width: 800px;
+            max-width: 900px;
             margin: 0 auto;
+            position: relative;
+            z-index: 1;
         }
 
         h1 {
-            color: white;
+            color: rgba(255, 255, 255, 0.98);
             text-align: center;
-            margin-bottom: 30px;
-            font-size: 2.5em;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+            margin-bottom: 50px;
+            font-size: 3.2em;
+            font-weight: 700;
+            letter-spacing: -1px;
+            text-shadow: 
+                0 2px 8px rgba(0, 0, 0, 0.3),
+                0 4px 20px rgba(27, 67, 50, 0.4),
+                0 0 40px rgba(168, 230, 207, 0.2);
+            position: relative;
+            z-index: 1;
+        }
+
+        h1::after {
+            content: '';
+            position: absolute;
+            bottom: -15px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 80px;
+            height: 4px;
+            background: linear-gradient(90deg, transparent, rgba(168, 230, 207, 0.8), transparent);
+            border-radius: 2px;
+            box-shadow: 0 0 20px rgba(168, 230, 207, 0.5);
         }
 
         .card {
-            background: white;
-            border-radius: 15px;
-            padding: 30px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.3);
-            margin-bottom: 30px;
+            background: 
+                linear-gradient(135deg, rgba(255, 255, 255, 0.15) 0%, rgba(255, 255, 255, 0.08) 100%);
+            backdrop-filter: blur(40px) saturate(180%) brightness(1.1);
+            -webkit-backdrop-filter: blur(40px) saturate(180%) brightness(1.1);
+            border-radius: 28px;
+            padding: 44px;
+            box-shadow: 
+                0 20px 60px rgba(0, 0, 0, 0.3),
+                0 8px 24px rgba(0, 0, 0, 0.2),
+                inset 0 1px 0 rgba(255, 255, 255, 0.3),
+                inset 0 -1px 0 rgba(0, 0, 0, 0.1);
+            margin-bottom: 32px;
+            border: 2px solid rgba(255, 255, 255, 0.25);
+            position: relative;
+            overflow: hidden;
+            z-index: 1;
+        }
+
+        .card::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.15), transparent);
+            transition: left 0.8s ease;
+        }
+
+        .card:hover::before {
+            left: 100%;
         }
 
         h2 {
-            color: #333;
-            margin-bottom: 20px;
-            font-size: 1.5em;
+            color: rgba(255, 255, 255, 0.95);
+            margin-bottom: 28px;
+            font-size: 1.6em;
+            font-weight: 700;
+            letter-spacing: -0.5px;
+            text-transform: uppercase;
+            font-size: 0.95em;
+            letter-spacing: 2px;
+            opacity: 0.9;
+            text-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
         }
 
         .form-group {
-            margin-bottom: 20px;
+            margin-bottom: 24px;
         }
 
         label {
             display: block;
-            margin-bottom: 8px;
-            color: #555;
+            margin-bottom: 10px;
+            color: rgba(255, 255, 255, 0.9);
             font-weight: 600;
+            font-size: 0.9em;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+            text-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
         }
 
         input[type="text"],
         input[type="number"],
         select {
             width: 100%;
-            padding: 12px;
-            border: 2px solid #e0e0e0;
-            border-radius: 8px;
+            padding: 16px 20px;
+            background: rgba(255, 255, 255, 0.15);
+            backdrop-filter: blur(20px);
+            border: 2px solid rgba(255, 255, 255, 0.25);
+            border-radius: 14px;
             font-size: 16px;
-            transition: border-color 0.3s;
+            color: #ffffff;
+            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+            box-shadow: 
+                inset 0 2px 8px rgba(0, 0, 0, 0.1),
+                0 0 0 0 rgba(168, 230, 207, 0);
         }
 
         input:focus,
         select:focus {
             outline: none;
-            border-color: #667eea;
+            background: rgba(255, 255, 255, 0.2);
+            border-color: rgba(168, 230, 207, 0.6);
+            box-shadow: 
+                inset 0 2px 8px rgba(0, 0, 0, 0.1),
+                0 0 0 4px rgba(168, 230, 207, 0.15),
+                0 4px 20px rgba(168, 230, 207, 0.2);
+            transform: translateY(-1px);
+        }
+
+        input::placeholder {
+            color: rgba(255, 255, 255, 0.4);
+        }
+
+        select option {
+            background: #2d6a4f;
+            color: white;
         }
 
         button {
             width: 100%;
-            padding: 14px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            padding: 18px;
+            background: linear-gradient(135deg, #40916c 0%, #2d6a4f 100%);
             color: white;
             border: none;
-            border-radius: 8px;
+            border-radius: 14px;
             font-size: 16px;
-            font-weight: 600;
+            font-weight: 700;
+            text-transform: uppercase;
+            letter-spacing: 1px;
             cursor: pointer;
-            transition: transform 0.2s, box-shadow 0.2s;
+            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+            box-shadow: 
+                0 8px 24px rgba(45, 106, 79, 0.25),
+                inset 0 1px 0 rgba(255, 255, 255, 0.15),
+                inset 0 -1px 0 rgba(0, 0, 0, 0.1);
+            position: relative;
+            overflow: hidden;
+        }
+
+        button::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2), transparent);
+            transition: left 0.5s ease;
+        }
+
+        button:hover::before {
+            left: 100%;
         }
 
         button:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 5px 15px rgba(102, 126, 234, 0.4);
+            transform: translateY(-3px);
+            box-shadow: 
+                0 12px 32px rgba(45, 106, 79, 0.35),
+                inset 0 1px 0 rgba(255, 255, 255, 0.15),
+                inset 0 -1px 0 rgba(0, 0, 0, 0.1);
         }
 
         button:active {
-            transform: translateY(0);
+            transform: translateY(-1px);
         }
 
         .message {
-            padding: 12px;
-            border-radius: 8px;
-            margin-bottom: 20px;
+            padding: 16px 22px;
+            border-radius: 14px;
+            margin-bottom: 24px;
             display: none;
+            backdrop-filter: blur(10px);
+            font-weight: 600;
+            border: 2px solid;
         }
 
         .message.success {
-            background: #d4edda;
-            color: #155724;
-            border: 1px solid #c3e6cb;
+            background: linear-gradient(135deg, rgba(212, 237, 218, 0.95), rgba(195, 230, 203, 0.95));
+            color: #1b4332;
+            border-color: rgba(82, 183, 136, 0.5);
+            box-shadow: 0 4px 16px rgba(82, 183, 136, 0.2);
         }
 
         .message.error {
-            background: #f8d7da;
-            color: #721c24;
-            border: 1px solid #f5c6cb;
+            background: linear-gradient(135deg, rgba(255, 220, 220, 0.95), rgba(255, 200, 200, 0.95));
+            color: #8b0000;
+            border-color: rgba(255, 100, 100, 0.5);
+            box-shadow: 0 4px 16px rgba(255, 100, 100, 0.2);
         }
 
         .message.show {
             display: block;
+            animation: slideIn 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        @keyframes slideIn {
+            from {
+                opacity: 0;
+                transform: translateY(-20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
 
         .expenses-list {
@@ -123,19 +289,46 @@
         }
 
         .expense-item {
-            background: #f8f9fa;
-            padding: 15px;
-            border-radius: 8px;
-            margin-bottom: 10px;
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.12) 0%, rgba(255, 255, 255, 0.08) 100%);
+            backdrop-filter: blur(30px) brightness(1.1);
+            padding: 22px 24px;
+            border-radius: 18px;
+            margin-bottom: 14px;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            transition: transform 0.2s;
+            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+            border: 2px solid rgba(255, 255, 255, 0.2);
+            box-shadow: 
+                0 4px 12px rgba(0, 0, 0, 0.15),
+                inset 0 1px 0 rgba(255, 255, 255, 0.2);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .expense-item::before {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 0;
+            bottom: 0;
+            width: 4px;
+            background: linear-gradient(180deg, #a8e6cf, #52b788);
+            opacity: 0;
+            transition: opacity 0.3s ease;
+        }
+
+        .expense-item:hover::before {
+            opacity: 1;
         }
 
         .expense-item:hover {
-            transform: translateX(5px);
-            background: #e9ecef;
+            transform: translateX(12px);
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.18) 0%, rgba(255, 255, 255, 0.12) 100%);
+            box-shadow: 
+                0 8px 24px rgba(0, 0, 0, 0.2),
+                inset 0 1px 0 rgba(255, 255, 255, 0.25);
+            border-color: rgba(168, 230, 207, 0.4);
         }
 
         .expense-info {
@@ -143,60 +336,110 @@
         }
 
         .expense-description {
-            font-weight: 600;
-            color: #333;
-            font-size: 1.1em;
-            margin-bottom: 5px;
+            font-weight: 700;
+            color: rgba(255, 255, 255, 0.95);
+            font-size: 1.15em;
+            margin-bottom: 8px;
+            letter-spacing: -0.2px;
+            text-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
         }
 
         .expense-details {
-            color: #666;
-            font-size: 0.9em;
+            color: rgba(255, 255, 255, 0.7);
+            font-size: 0.88em;
+            font-weight: 500;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
         }
 
         .expense-amount {
-            font-size: 1.5em;
-            font-weight: bold;
-            color: #667eea;
+            font-size: 1.65em;
+            font-weight: 800;
+            color: rgba(255, 255, 255, 0.98);
+            text-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+            letter-spacing: -0.5px;
         }
 
         .empty-state {
             text-align: center;
-            color: #999;
-            padding: 40px;
+            color: rgba(255, 255, 255, 0.6);
+            padding: 50px;
             font-size: 1.1em;
+            font-weight: 500;
+            text-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
         }
 
         .total-section {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: 
+                linear-gradient(135deg, rgba(168, 230, 207, 0.25) 0%, rgba(82, 183, 136, 0.25) 100%);
+            backdrop-filter: blur(40px) brightness(1.2);
             color: white;
-            padding: 20px;
-            border-radius: 8px;
-            margin-bottom: 20px;
+            padding: 28px 32px;
+            border-radius: 20px;
+            margin-bottom: 24px;
             display: flex;
             justify-content: space-between;
             align-items: center;
+            border: 2px solid rgba(255, 255, 255, 0.3);
+            box-shadow: 
+                0 12px 32px rgba(0, 0, 0, 0.25),
+                inset 0 1px 0 rgba(255, 255, 255, 0.3),
+                inset 0 -1px 0 rgba(0, 0, 0, 0.15);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .total-section::before {
+            content: '';
+            position: absolute;
+            top: -50%;
+            right: -50%;
+            width: 200%;
+            height: 200%;
+            background: radial-gradient(circle, rgba(255, 255, 255, 0.1) 0%, transparent 70%);
+            animation: rotate 20s linear infinite;
+        }
+
+        @keyframes rotate {
+            from { transform: rotate(0deg); }
+            to { transform: rotate(360deg); }
         }
 
         .total-label {
-            font-size: 1.2em;
+            font-size: 1.15em;
+            font-weight: 600;
+            letter-spacing: 1px;
+            text-transform: uppercase;
+            opacity: 0.95;
+            position: relative;
+            z-index: 1;
+            text-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
         }
 
         .total-amount {
-            font-size: 2em;
-            font-weight: bold;
+            font-size: 2.4em;
+            font-weight: 800;
+            text-shadow: 
+                0 2px 8px rgba(0, 0, 0, 0.3),
+                0 4px 16px rgba(0, 0, 0, 0.2);
+            letter-spacing: -1px;
+            position: relative;
+            z-index: 1;
         }
 
         .loading {
             text-align: center;
-            color: #999;
-            padding: 20px;
+            color: rgba(255, 255, 255, 0.6);
+            padding: 24px;
+            font-weight: 500;
+            text-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>💰 Expenses Tracker</h1>
+        <h1>🌿 Expenses Tracker</h1>
 
         <div class="card">
             <h2>Add New Expense</h2>
